--- a/assets/templates/docker-compose/environments/magento2/magento2.base.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.base.yml
@@ -38,3 +38,9 @@ services:
   php-debug:
     environment:
       - MAGE_DEBUG_SHOW_ARGS=1
+
+{{- if ( default false .reward_spx ) }}
+  php-spx:
+    environment:
+      - MAGE_DEBUG_SHOW_ARGS=1
+{{- end }}
