--- a/.github/workflows/dev-docker-image-php-fpm-shopware.yml
+++ b/.github/workflows/dev-docker-image-php-fpm-shopware.yml
@@ -16,18 +16,21 @@ jobs:
     strategy:
       matrix:
         docker_base_images: [ "debian-bullseye", "ubuntu-jammy", "debian-bullseye-rootless" ]
-        php_version: [ "7.3", "7.4", "8.0", "8.1", "8.2" ]
+        php_version: [ "7.3", "7.4", "8.0", "8.1", "8.2", "8.3" ]
         build_group: [ "shopware" ]
-    #        include:
-    #          - docker_base_images: "debian-bookworm"
-    #            php_version: "8.0"
-    #            build_group: "shopware"
-    #          - docker_base_images: "debian-bookworm"
-    #            php_version: "8.1"
-    #            build_group: "shopware"
-    #          - docker_base_images: "debian-bookworm"
-    #            php_version: "8.2"
-    #            build_group: "shopware"
+        include:
+          - docker_base_images: "debian-bookworm"
+            php_version: "8.0"
+            build_group: "shopware"
+          - docker_base_images: "debian-bookworm"
+            php_version: "8.1"
+            build_group: "shopware"
+          - docker_base_images: "debian-bookworm"
+            php_version: "8.2"
+            build_group: "shopware"
+          - docker_base_images: "debian-bookworm"
+            php_version: "8.3"
+            build_group: "shopware"
     steps:
       - uses: actions/checkout@v4
       - name: Login to DockerHub
