--- a/assets/templates/docker-compose/environments/includes/allure.base.yml
+++ b/assets/templates/docker-compose/environments/includes/allure.base.yml
@@ -34,5 +34,11 @@ services:
     volumes:
       - allure-results:/var/allure-results
 
+{{- if ( default false .reward_spx ) }}
+  php-spx:
+    volumes:
+      - allure-results:/var/allure-results
+{{- end }}
+
 volumes:
   allure-results:
