--- a/assets/templates/docker-compose/environments/magento2/magento2.darwin.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.darwin.yml
@@ -13,6 +13,9 @@ services:
 {{ end }}
   php-fpm: { volumes: *volumes, environment: *environment }
   php-debug: { volumes: *volumes, environment: *environment }
+{{- if ( default false .reward_spx ) }}
+  php-spx: { volumes: *volumes, environment: *environment }
+{{- end }}
 
 volumes:
   appdata:
