--- a/assets/templates/docker-compose/environments/magento2/magento2.splitdb.checkout.base.yml
+++ b/assets/templates/docker-compose/environments/magento2/magento2.splitdb.checkout.base.yml
@@ -9,6 +9,12 @@ services:
     depends_on:
       - checkoutdb
 
+{{- if ( default false .reward_spx ) }}
+  php-spx:
+    depends_on:
+      - checkoutdb
+{{- end }}
+
   checkoutdb:
     hostname: "{{ .reward_env_name }}-checkoutdb"
     image: {{ default "docker.io/rewardenv" .reward_docker_image_repo }}/mariadb:{{ default "10.4" .mariadb_version }}
