--- a/images/nginx/1.21/Dockerfile
+++ b/images/nginx/1.21/Dockerfile
@@ -19,6 +19,8 @@ ENV NGINX_UPSTREAM_DEBUG_HOST     php-debug
 ENV NGINX_UPSTREAM_DEBUG_PORT     9000
 ENV NGINX_UPSTREAM_BLACKFIRE_HOST php-blackfire
 ENV NGINX_UPSTREAM_BLACKFIRE_PORT 9000
+ENV NGINX_UPSTREAM_SPX_HOST       php-spx
+ENV NGINX_UPSTREAM_SPX_PORT       9000
 ENV NGINX_ROOT                    /var/www/html
 ENV NGINX_PUBLIC                  ''
 ENV NGINX_TEMPLATE                application.conf
