--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,10 @@
 sonar.projectKey=rewardenv_reward
 sonar.organization=rewardenv
-
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=reward
 sonar.projectVersion=0.6.3
-
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
-
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.excludes=assets/templates/docker-compose/**/*.yml
