--- a/.github/workflows/main-docker-image-php-fpm-base.yml
+++ b/.github/workflows/main-docker-image-php-fpm-base.yml
@@ -15,7 +15,7 @@ on:
       - main
 jobs:
   php-fpm-base:
-    name: php-fpm-base
+    name: php-fpm/base
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
