--- a/.github/workflows/main-docker-image-php-fpm-spx.yml
+++ b/.github/workflows/main-docker-image-php-fpm-spx.yml
@@ -14,8 +14,8 @@ on:
     branches:
       - main
 jobs:
-  spx:
-    name: php-fpm-spx
+  php-fpm-spx:
+    name: php-fpm/spx
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
