--- a/.github/workflows/main-docker-image-php-fpm-wordpress.yml
+++ b/.github/workflows/main-docker-image-php-fpm-wordpress.yml
@@ -118,8 +118,8 @@ jobs:
           cache-from: type=registry,ref=${{ vars.DOCKER_REPO }}/php-fpm:${{ matrix.PHP_VERSION }}-wordpress-${{ matrix.BASE_IMAGE_NAME }}-${{ matrix.BASE_IMAGE_TAG }}
           cache-to: type=inline
 
-  wordpress-apps:
-    name: wordpress - apps
+  php-fpm-wordpress-apps:
+    name: php-fpm/wordpress-apps
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     needs:
