--- a/.github/workflows/main-docker-image-php-fpm-xdebug2.yml
+++ b/.github/workflows/main-docker-image-php-fpm-xdebug2.yml
@@ -14,8 +14,8 @@ on:
     branches:
       - main
 jobs:
-  xdebug2:
-    name: php-fpm-xdebug2
+  php-fpm-xdebug2:
+    name: php-fpm/xdebug2
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     strategy:
